Fix nav header alignment: force left-align on site title

--- a/docs/_sass/color_schemes/octo-dark.scss
+++ b/docs/_sass/color_schemes/octo-dark.scss
@@ -25,8 +25,10 @@ $border-color: #334155;
     font-size: 1.1rem !important;
     color: #e2e8f0;
     padding: 0.75rem 1rem;
-    display: flex;
+    display: flex !important;
     align-items: center;
+    justify-content: flex-start !important;
+    text-align: left !important;
   }
 }
 
