--- a/docs/_sass/color_schemes/octo.scss
+++ b/docs/_sass/color_schemes/octo.scss
@@ -19,8 +19,10 @@ $feedback-color: #0e7490;
     font-size: 1.1rem !important;
     color: #0f172a;
     padding: 0.75rem 1rem;
-    display: flex;
+    display: flex !important;
     align-items: center;
+    justify-content: flex-start !important;
+    text-align: left !important;
   }
 }
 
